====== inet-4.x ======

2021-01-11  ------ inet-4.3.0 released ------

2020-07-22  Levente Mészáros

	Renamed InterfaceEntry -> NetworkInterface and interfaceEntry -> networkInterface.

2020-05-05  Levente Mészáros

	Dropped unused macMaxFrameRetries parameter that was replaced by maxTxAttempts.

2020-01-08  ------ inet-4.2.0 released ------

2019-11-14  Zoltan Bojthe

	Redesigned BMacHeader, added ctrlFrameLength NED parameter.

	Removed the base header MacHeaderBase, added BMacHeaderBase, BMacHeader.
	Replaced to BMacControlFrame or BMacDataFrameHeader, added
	ctrlFrameLength NED parameter for define length of BMacControlFrame.

2019-08-14  marcell

	Added BMacHeaderSerializer.

2019-10-18  Zoltan Bojthe

	Added message kind infos (name of used cEnum).
	Changed to use msg constructor to set message name and message kind.

2019-10-14  Levente Mészáros

	Dropped queue length related parameters from MAC modules.

	The queue packet capacity and data capacity can already be set on the
	queue. If the queue module is more complicated then these parameters are
	meaningless anyway, because there may be way more parameters than one.

2019-10-14  Levente Mészáros

	Removed allowunconnected because queue in/out gates are loose.

2019-10-10  Levente Mészáros

	Fixed statistic names reported by Edward Longman.

2019-09-02  Zoltan Bojthe

	Optimized tag usage.

2019-06-03  Zoltan Bojthe

	Removed unneeded clearQueue() and flushQueue() functions already implemented in MacProtocolBase.
	Renamed transmissionQueue --> txQueue and popFromTransmissionQueue() --> popTxQueue().

2019-05-27  Zoltan Bojthe

	Moved popPacket() out from sendDataPacket() and fixed RESEND_DATA.

2019-05-24  Zoltan Bojthe

	Optimized 'queue->getNumPackets()>0' to '!queue->isEmpty()'.

2019-05-22  Zoltan Bojthe

	Switched to popPacket() instead of getPacket(0).

2019-03-14  Levente Mészáros

	Replaced internal queue with IPacketQueue submodule.

2019-01-28  ------ inet-4.1.0 released ------
