@@ -1,4 +1,7 @@
 //
+// Copyright (C) 2008-2010, Anna Foerster, NetLab, SUPSI, Switzerland.
+// Copyright (C) 2010 OpenSim Ltd.
+//
 // SPDX-License-Identifier: LGPL-3.0-or-later
 //
 // This program is free software: you can redistribute it and/or modify
