@@ -1,4 +1,7 @@
 //
+// Copyright (C) 2008-2010, Anna Foerster, NetLab, SUPSI, Switzerland.
+// Copyright (C) 2010 OpenSim Ltd.
+//
 // SPDX-License-Identifier: LGPL-3.0-or-later
 //
 // This program is free software: you can redistribute it and/or modify
@@ -16,32 +19,6 @@
 //
 
 package inet.linklayer.bmac;
-
-//***************************************************************************
-//* file:        BMac.ned
-//*
-//* author:      Anna Foerster
-//*
-//* copyright:   (C) 22008- 2010, NetLab, SUPSI, Switzerland.
-//*
-// SPDX-License-Identifier: GPL-2.0-or-later
-//
-// This program is free software; you can redistribute it and/or
-// modify it under the terms of the GNU General Public License
-// as published by the Free Software Foundation; either version 2
-// of the License, or (at your option) any later version.
-//
-// This program is distributed in the hope that it will be useful,
-// but WITHOUT ANY WARRANTY; without even the implied warranty of
-// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-// GNU General Public License for more details.
-//
-// You should have received a copy of the GNU General Public License
-// along with this program; if not, write to the Free Software
-// Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
-//
-//*
-//**************************************************************************/
 
 import inet.queueing.contract.IPacketQueue;
 import inet.linklayer.base.MacProtocolBase;
